--- a/.github/workflows/config_gene.yml
+++ b/.github/workflows/config_gene.yml
@@ -14,7 +14,7 @@ on:
           - false
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/kevinCSDN/lede_openwrt_5.4.124
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
